--- a/public/style.css
+++ b/public/style.css
@@ -27,30 +27,61 @@ html, body {
   top: 0;
 }
 
-.colors {
-  position: fixed;
-}
-
-.color, .user-color {
-  display: inline-block;
-  height: 48px;
-  width: 48px;
-}
-
-.color.black { background-color: black; }
-.color.red { background-color: red; }
-.color.green { background-color: green; }
-.color.blue { background-color: blue; }
-.color.yellow { background-color: yellow; }
-
 .user-controls {
   position: fixed;
   bottom:0;
   z-index: 2;
 }
 
-.user-color.black { background-color: black; }
-.user-color.red { background-color: red; }
-.user-color.green { background-color: green; }
-.user-color.blue { background-color: blue; }
-.user-color.yellow { background-color: yellow; }
+.colors {
+  position: absolute;
+  z-index: 2;
+  bottom: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+#colorpicker {
+  color: rgba(255,255,255,0);
+  width: 40px;
+  height: 40px;
+  border-radius: 4px;
+  border-style: none;
+}
+
+.slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 25px;
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+.slider:hover {
+  opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  background: var(--pseudo-color, black);
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  background: var(--pseudo-color, black);
+  cursor: pointer;
+}
+
+.hidden {
+  opacity: 0;
+}
