--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,3 @@
-
 /**
  * Fix user-agent
  */
@@ -7,7 +6,8 @@
   box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
   height: 100%;
   margin: 0;
   padding: 0;
@@ -29,7 +29,7 @@ html, body {
 
 .user-controls {
   position: fixed;
-  bottom:0;
+  bottom: 0;
   z-index: 2;
 }
 
@@ -44,9 +44,9 @@ html, body {
 }
 
 #colorpicker {
-  color: rgba(255,255,255,0);
-  width: 40px;
-  height: 40px;
+  color: rgba(255, 255, 255, 0);
+  width: 120px;
+  height: 120px;
   border-radius: 4px;
   border-style: none;
 }
@@ -54,7 +54,7 @@ html, body {
 .slider {
   -webkit-appearance: none;
   width: 100%;
-  height: 25px;
+  height: 120px;
   background: #d3d3d3;
   outline: none;
   opacity: 0.7;
@@ -69,15 +69,15 @@ html, body {
 .slider::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
-  width: 25px;
-  height: 25px;
+  width: 120px;
+  height: 120px;
   background: var(--pseudo-color, black);
   cursor: pointer;
 }
 
 .slider::-moz-range-thumb {
-  width: 25px;
-  height: 25px;
+  width: 120px;
+  height: 120px;
   background: var(--pseudo-color, black);
   cursor: pointer;
 }
