--- a/public/style.css
+++ b/public/style.css
@@ -43,18 +43,10 @@ body {
   width: 100%;
 }
 
-#colorpicker {
-  color: rgba(255, 255, 255, 0);
-  width: 120px;
-  height: 120px;
-  border-radius: 4px;
-  border-style: none;
-}
-
 .slider {
   -webkit-appearance: none;
   width: 100%;
-  height: 120px;
+  height: 12vh;
   background: #d3d3d3;
   outline: none;
   opacity: 0.7;
@@ -69,15 +61,15 @@ body {
 .slider::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
-  width: 120px;
-  height: 120px;
+  width: 12vh;
+  height: 12vh;
   background: var(--pseudo-color, black);
   cursor: pointer;
 }
 
 .slider::-moz-range-thumb {
-  width: 120px;
-  height: 120px;
+  width: 12vh;
+  height: 12vh;
   background: var(--pseudo-color, black);
   cursor: pointer;
 }
@@ -86,6 +78,25 @@ body {
   opacity: 0;
 }
 
-.color-picker__dialog {
-  transform: scale(4)
+#colorpicker {
+  height: 12vh;
+  width: 12vw;
+  border: none;
+}
+
+.no-cursor {
+  pointer-events: none;
+  background-color: lightgray;
+}
+
+input[type="color"] {
+  appearance: none;
+  -webkit-appearance: none;
+  -webkit-border-radius: 0;
+  border: none;
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+  outline: none;
+  padding: 0;
 }
