--- a/public/visualiser.css
+++ b/public/visualiser.css
@@ -1,30 +1,73 @@
 @keyframes partyAnimation {
-    0% {
-      transform: rotate(0deg) translateX(0px);
-    }
-    25% {
-      transform: rotate(90deg) translateX(100px);
-    }
-    50% {
-      transform: rotate(180deg) translateX(0px);
-    }
-    75% {
-      transform: rotate(270deg) translateX(-100px);
-    }
-    100% {
-      transform: rotate(360deg) translateX(0px);
-    }
+  0% {
+    transform: rotate(0deg) translateX(0px);
   }
-  
-  .party-div {
-    position: relative;
-    animation: partyAnimation 2s ease-in-out infinite;
+  25% {
+    transform: rotate(90deg) translateX(100px);
   }
+  50% {
+    transform: rotate(180deg) translateX(0px);
+  }
+  75% {
+    transform: rotate(270deg) translateX(-100px);
+  }
+  100% {
+    transform: rotate(360deg) translateX(0px);
+  }
+}
 
-  .party-active {
-    animation: partyAnimation 4s linear;
-  }
+.party-div {
+  position: relative;
+  animation: partyAnimation 2s linear infinite;
+}
 
-  .hidden {
-    opacity: 0;
+.party-active {
+  animation: partyAnimation 4s linear;
+}
+
+.hidden {
+  opacity: 0;
+}
+
+@keyframes zoomAnimation {
+  0% {
+    transform: scale(1);
   }
+  25% {
+    transform: scale(1.2);
+  }
+  50% {
+    transform: scale(1.7);
+  }
+  75% {
+    transform: scale(2);
+  }
+  100% {
+    transform: scale(3);
+  }
+}
+
+.zoom-div {
+  position: relative;
+  animation: zoomAnimation 2s linear infinite;
+}
+
+.zoom-active {
+  animation: zoomAnimation 2s linear;
+}
+
+@keyframes defaultAnimation {
+  0% {
+    transform: translate(0px, 0px);
+  }
+  50% {
+    transform: translate(40px, 40px);
+  }
+  100% {
+    transform: translate(0px, 0px);
+  }
+}
+
+.default-animation {
+  animation: defaultAnimation 1s linear infinite;
+}
